[package]
name = "gecko_audio_ctrl"
version = "0.1.0"
authors = ["david <git@david-wilkening.de>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# https://docs.rs/tui/0.10
tui = "0.10"
# https://docs.rs/dns-sd/0.1
dns-sd = "0.1"
 # https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-channel
crossbeam-channel = "0.4"