[package]
name = "gecko_audio_ctrl"
version = "0.1.0"
authors = ["david <git@david-wilkening.de>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# https://docs.rs/tui/0.10
tui = "0.10"
# https://docs.rs/termion/1.5
termion = "1.5"
# https://docs.rs/astro-dnssd/0.1
astro-dnssd = "0.1"
# https://github.com/crossbeam-rs/crossbeam/tree/master/crossbeam-channel
crossbeam-channel = "0.4"
# https://docs.rs/notify/4.0.
notify = "4.0"